Refactorized users routes and logic, added filtering by id, username, email, role and pagination, updated readme and swagger docs
