# src/models/user.ts
@@ -9,3 +9,9 @@ export type User = {
 }
 export type UserRole = "leader" | "user";
 export const validRoles: UserRole[] = ["leader", "user"];
+export type UserFilter = {
+  id?: string;
+  username?: string;
+  email?: string;
+  role?: string;
+}
